--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Fran's Project woo</title>
-    <link rel="stylesheet" href="/styles/main.css" />
-  </head>
-  <body>
-    <h2>My stuff</h2>
-    <!-- Custom scripts, edit above this line -->
-    <script src="scripts/index.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Fran's Project woo</title>
+  <link rel="stylesheet" href="/styles/main.css" />
+</head>
+
+<body>
+
+
+  <nav>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+    </ul>
+  </nav>
+
+
+  <div class="hero">
+    <h1>My Personal website!</h1>
+  </div>
+  <div class="container1">
+    <section class="box1"><img src="./images/mountain.jpg" width="300px" height="200px" alt="">
+      <div>
+      <h2>Mountains</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quidem molestias voluptatem neque, omnis
+        debitis facilis dolore corporis aut necessitatibus, natus cum nulla. Neque cupiditate laboriosam ea deserunt
+        beatae ipsa!</p>
+      </div>
+    </section>
+    <section class="box2"><img src="./images/surfer.jpg" width="300px" height="200px" alt="">
+      <div>
+      <h2>Surfer</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quidem molestias voluptatem neque, omnis
+        debitis facilis dolore corporis aut necessitatibus, natus cum nulla. Neque cupiditate laboriosam ea deserunt
+        beatae ipsa!</p>
+      </div>
+    </section>
+    <section class="box3"><img src="./images/tree.jpg" width="300px" height="200px" alt="">
+      <div>
+        <h2>Tree</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quidem molestias voluptatem neque, omnis
+          debitis facilis dolore corporis aut necessitatibus, natus cum nulla. Neque cupiditate laboriosam ea deserunt
+          beatae ipsa!</p>
+      </div>
+    </section>
+  </div>
+
+  <div class="container2">
+    <aside>
+      <h2>Aside1</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eaque iste obcaecati nemo dicta
+      doloremque itaque suscipit, culpa ea veritatis exercitationem, asperiores consequuntur tempora, nisi neque ad.
+      Perferendis, enim quos?
+    </aside>
+    <article>
+      <h2>Article</h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro molestias officiis maiores dolor at, tenetur
+      repellendus excepturi necessitatibus sed eum voluptatibus amet ad iusto ducimus velit error, totam qui
+      exercitationem.
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla facilis nesciunt ipsa, officiis cupiditate blanditiis quisquam, eius magnam, unde nam recusandae? Ullam labore hic ea tempore quas, expedita accusantium aliquid?
+    </article>
+    <aside>
+      <h2>Aside1</h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eaque iste obcaecati nemo dicta
+      doloremque itaque suscipit, culpa ea veritatis exercitationem, asperiores consequuntur tempora, nisi neque ad.
+      Perferendis, enim quos?
+    </aside>
+  </div>
+<footer>
+  <ul>
+    <li>Github</li>
+    <li>Codepen</li>
+    <li>Linkedin</li>
+  </ul>
+
+</footer>
+  <!-- Custom scripts, edit above this line -->
+  <script src="scripts/index.js"></script>
+</body>
+
 </html>
